--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
     "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.1",
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.26.1",
+    "dayjs": "^1.11.1",
     "i18next": "^21.6.16",
     "inversify": "^6.0.1",
+    "jest-when": "^3.5.1",
     "native-base": "^3.4.3",
     "react": "17.0.2",
     "react-i18next": "^11.16.7",
     "react-native": "0.68.1",
     "react-native-config": "^1.4.5",
+    "react-native-gesture-handler": "^2.4.1",
     "react-native-localize": "^2.2.1",
     "react-native-paper": "^4.12.0",
     "react-native-safe-area-context": "^4.2.4",
@@ -39,7 +43,8 @@
     "@babel/plugin-proposal-decorators": "^7.17.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
-    "@types/jest": "^26.0.23",
+    "@testing-library/react-native": "^9.1.0",
+    "@types/jest": "^26.0.24",
     "@types/react-native": "^0.67.3",
     "@types/react-native-vector-icons": "^6.4.10",
     "@types/react-test-renderer": "^17.0.1",
@@ -50,22 +55,14 @@
     "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
+    "jest-mock-extended": "^2.0.5",
     "metro-react-native-babel-preset": "^0.67.0",
     "react-test-renderer": "17.0.2",
+    "ts-jest": "^27.1.4",
+    "ts-node": "^10.7.0",
     "typescript": "^4.4.4"
   },
   "resolutions": {
     "@types/react": "^17"
-  },
-  "jest": {
-    "preset": "react-native",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
-    ]
   }
 }
