--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
-    "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.26.1",
     "dayjs": "^1.11.1",
     "i18next": "^21.6.16",
@@ -32,8 +31,8 @@
     "react-native-screens": "^3.13.1",
     "react-native-svg": "^12.3.0",
     "react-native-vector-icons": "^9.1.0",
+    "react-native-webview": "^11.18.1",
     "react-query": "^3.37.0",
-    "react-redux": "^8.0.0",
     "reflect-metadata": "^0.1.13",
     "typedjson": "^1.8.0",
     "typevert": "^0.9.11"
