--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "inversify": "^6.0.1",
     "native-base": "^3.4.5",
     "react": "17.0.2",
+    "react-hook-form": "^7.31.3",
     "react-i18next": "^11.16.9",
     "react-native": "0.68.1",
     "react-native-config": "^1.4.5",
